external-crates/move/crates/move-package-alt/tests/data/edition_unknown/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: unsupported edition 'foobar', expected one of '2024, 2024.beta, legacy'
  ┌─ tests/data/edition_unknown/Move.toml:3:11
  │
3 │ edition = "foobar"
  │           ^^^^^^^^
